[gd_scene load_steps=5 format=3 uid="uid://6vuytot16dnc"]

[ext_resource type="Script" path="res://player.gd" id="1_l1tvb"]
[ext_resource type="PackedScene" uid="uid://dubupiotcgo6l" path="res://map_menu.tscn" id="2_a6fhy"]
[ext_resource type="PackedScene" uid="uid://dgtcfj0l6tkj1" path="res://tool_menu.tscn" id="2_esh3s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3c7g1"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_l1tvb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_3c7g1")

[node name="Camera3D" type="Camera3D" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2000)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ToolEquiped" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="UI/ToolEquiped"]
texture_filter = 1

[node name="MapMenu" parent="UI" instance=ExtResource("2_a6fhy")]

[node name="ToolMenu" parent="UI" instance=ExtResource("2_esh3s")]

[node name="TextureRect" type="TextureRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
